--- a/game/game-frontend/package.json
+++ b/game/game-frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "angular2-hotkeys": "^13.1.0",
     "interacto": "7.3.0",
     "interacto-angular": "7.14.3",
     "rxjs": "~7.5.0",
